Central transaction Modal
- for Records and Flows
- for Remotes

--- a/app/templates/main/account.j2
+++ b/app/templates/main/account.j2
@@ -20,7 +20,7 @@
 </button>
 <!-- Modal -->
 <!-- defined in included trans_modals.j2 -->
-{{ trans_modal.modal(account, url_for('main.account', account_id=account.id), agents, categories, none) }}
+{{ trans_modal.modal(agents, categories, currencies, accounts) }}
 
 <table class="table table-hover">
     <caption><a href="{{ url_for('main.account_transactions', account_id=account.id) }}">More...</a></caption>
