--- a/app/templates/main/layout.j2
+++ b/app/templates/main/layout.j2
@@ -12,6 +12,7 @@
     <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap4.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/luxon@1.27.0/build/global/luxon.min.js"></script>
     <script src="{{ url_for('static', filename='js/helpers.js') }}"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/custom.css')}}"></link>
     <title>Finnance</title>
