--- a/app/templates/main/transactions.j2
+++ b/app/templates/main/transactions.j2
@@ -18,7 +18,7 @@ Current Saldo: {{ saldo }}</p>
     </tbody>
 </table>
 
-{{ trans_modal.modal(agents, categories, currencies, accounts) }}
+{{ trans_modal.modal(accounts, agents, categories, currencies) }}
 
 <script>
 $(document).ready(function () {
